"""Init models

Revision ID: f643ebdb4d3b
Revises: 
Create Date: 2024-07-16 21:03:33.327059

"""
from alembic import op
import sqlalchemy as sa

import db

# revision identifiers, used by Alembic.
revision: str | None = 'f643ebdb4d3b'
down_revision: str | None = None
branch_labels: str | None = None
depends_on: str | None = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('good_groups',
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('parent_group_guid', sa.String(length=255), nullable=True),
    sa.Column('guid', db.models.mixins.GUID(), nullable=False),
    sa.ForeignKeyConstraint(['parent_group_guid'], ['good_groups.guid'], name=op.f('good_groups_parent_group_guid_fkey')),
    sa.PrimaryKeyConstraint('guid', name=op.f('good_groups_pkey'))
    )
    op.create_table('specifications',
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('guid', db.models.mixins.GUID(), nullable=False),
    sa.PrimaryKeyConstraint('guid', name=op.f('specifications_pkey'))
    )
    op.create_table('goods',
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('type', sa.Enum('NEW', 'REGULAR', 'HIT', name='goodtypesenum'), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('good_group_guid', sa.String(length=255), nullable=False),
    sa.Column('guid', db.models.mixins.GUID(), nullable=False),
    sa.ForeignKeyConstraint(['good_group_guid'], ['good_groups.guid'], name=op.f('goods_good_group_guid_fkey')),
    sa.PrimaryKeyConstraint('guid', name=op.f('goods_pkey'))
    )
    op.create_table('properties',
    sa.Column('name', sa.Enum('FILLING', 'FLAVOR', 'STRENGTH', 'FORMAT', 'MANUFACTURING_METHOD', 'PACKAGING', 'BLOCK', 'BOX', name='propertynamesenum'), nullable=False),
    sa.Column('value', sa.Text(), nullable=False),
    sa.Column('specification_guid', sa.String(length=255), nullable=False),
    sa.Column('guid', db.models.mixins.GUID(), nullable=False),
    sa.ForeignKeyConstraint(['specification_guid'], ['specifications.guid'], name=op.f('properties_specification_guid_fkey')),
    sa.PrimaryKeyConstraint('guid', name=op.f('properties_pkey'))
    )
    op.create_table('goods_specs',
    sa.Column('good_guid', db.models.mixins.GUID(), nullable=True),
    sa.Column('specification_guid', db.models.mixins.GUID(), nullable=True),
    sa.ForeignKeyConstraint(['good_guid'], ['goods.guid'], name=op.f('goods_specs_good_guid_fkey')),
    sa.ForeignKeyConstraint(['specification_guid'], ['specifications.guid'], name=op.f('goods_specs_specification_guid_fkey'))
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('goods_specs')
    op.drop_table('properties')
    op.drop_table('goods')
    op.drop_table('specifications')
    op.drop_table('good_groups')
    # ### end Alembic commands ###
